WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
207637
RELEASE_ASSERT() under WebSWClientConnection::didResolveRegistrationPromise()
https://bugs.webkit.org/show_bug.cgi?id=207637
Summary
RELEASE_ASSERT() under WebSWClientConnection::didResolveRegistrationPromise()
Chris Dumez
Reported
2020-02-12 08:49:25 PST
RELEASE_ASSERT() under WebSWClientConnection::didResolveRegistrationPromise(): Thread 0 Crashed ↩:: Dispatch queue: com.apple.main-thread 0 com.apple.WebKit 0x00007fff474fddd3 WTFCrashWithInfo(int, char const*, char const*, int) + 19 1 com.apple.WebKit 0x00007fff4792ee16 void WebCore::ServiceWorkerRegistrationKey::encode<IPC::Encoder>(IPC::Encoder&) const + 92 2 com.apple.WebKit 0x00007fff47926fe0 WebKit::WebSWClientConnection::didResolveRegistrationPromise(WebCore::ServiceWorkerRegistrationKey const&) + 162 3 com.apple.WebCore 0x00007fff46fc8298 WTF::Detail::CallableWrapper<WebCore::ServiceWorkerContainer::jobResolvedWithRegistration(WebCore::ServiceWorkerJob&, WebCore::ServiceWorkerRegistrationData&&, WebCore::ShouldNotifyWhenResolved)::$_24, void>::~CallableWrapper() + 72 4 com.apple.WebCore 0x00007fff46fc73fb WTF::Detail::CallableWrapper<void WebCore::ActiveDOMObject::queueTaskKeepingObjectAlive<WebCore::ServiceWorkerContainer>(WebCore::ServiceWorkerContainer&, WebCore::TaskSource, WTF::Function<void ()>&&)::'lambda'(), void>::~CallableWrapper() + 43 5 com.apple.WebCore 0x00007fff463216ca WebCore::EventLoopFunctionDispatchTask::~EventLoopFunctionDispatchTask() + 42 6 com.apple.WebCore 0x00007fff462ce4fd WebCore::Document::commonTeardown() + 253 7 com.apple.WebCore 0x00007fff45037c5d WebCore::Document::prepareForDestruction() + 1117 8 com.apple.WebCore 0x00007fff4685184a WebCore::Frame::setView(WTF::RefPtr<WebCore::FrameView, WTF::DumbPtrTraits<WebCore::FrameView> >&&) + 298 9 com.apple.WebCore 0x00007fff4509e88c WebCore::FrameLoader::detachFromParent() + 668 10 com.apple.WebKit 0x00007fff474c1b30 WebKit::WebPage::close() + 1176 11 com.apple.WebKit 0x00007fff479c43bd WebKit::WebPage::didReceiveWebPageMessage(IPC::Connection&, IPC::Decoder&) + 659 12 com.apple.WebKit 0x00007fff4752743a IPC::MessageReceiverMap::dispatchMessage(IPC::Connection&, IPC::Decoder&) + 114 13 com.apple.WebKit 0x00007fff478d80ae WebKit::WebProcess::didReceiveMessage(IPC::Connection&, IPC::Decoder&) + 28 14 com.apple.WebKit 0x00007fff475138c5 IPC::Connection::dispatchMessage(std::__1::unique_ptr<IPC::Decoder, std::__1::default_delete<IPC::Decoder> >) + 241 15 com.apple.WebKit 0x00007fff475162c9 WTF::Detail::CallableWrapper<IPC::Connection::enqueueIncomingMessage(std::__1::unique_ptr<IPC::Decoder, std::__1::default_delete<IPC::Decoder> >)::$_7, void>::call() + 223 16 com.apple.JavaScriptCore 0x00007fff3a9ed4c9 WTF::RunLoop::performWork() + 473 17 com.apple.JavaScriptCore 0x00007fff3a9ed6ca WTF::RunLoop::performWork(void*) + 26 18 com.apple.CoreFoundation 0x00007fff361bce84 __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ + 17
Attachments
Patch
(1.90 KB, patch)
2020-02-12 08:51 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2020-02-12 08:49:37 PST
<
rdar://problem/59093490
>
Chris Dumez
Comment 2
2020-02-12 08:51:51 PST
Created
attachment 390526
[details]
Patch
WebKit Commit Bot
Comment 3
2020-02-12 10:24:22 PST
Comment on
attachment 390526
[details]
Patch Clearing flags on attachment: 390526 Committed
r256447
: <
https://trac.webkit.org/changeset/256447
>
WebKit Commit Bot
Comment 4
2020-02-12 10:24:23 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug