Cherry-pick r256447. rdar://problem/59446998

RELEASE_ASSERT() under WebSWClientConnection::didResolveRegistrationPromise()
    https://bugs.webkit.org/show_bug.cgi?id=207637
    <rdar://problem/59093490>

    Reviewed by Youenn Fablet.

    We were capturing data by reference in the notifyIfExitEarly ScopeExit lambda and then capturing it
    in the task posted to the event loop, which was unsafe.

    * workers/service/ServiceWorkerContainer.cpp:
    (WebCore::ServiceWorkerContainer::jobResolvedWithRegistration):

    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@256447 268f45cc-cd09-0410-ab3c-d52691b4dbfc

git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-609-branch@256675 268f45cc-cd09-0410-ab3c-d52691b4dbfc